fixes alignment and published character

--- a/_assets/scss/_globals/_helpers.scss
+++ b/_assets/scss/_globals/_helpers.scss
@@ -30,6 +30,18 @@
 
 .cf {clear:both}
 
+.sm-cf {
+  @include breakpoint($small) {
+    clear: both;
+  }
+}
+
+.md-cf-off {
+  @include breakpoint($med) {
+    clear: none;
+  }
+}
+
 %clearfix:before,
 %clearfix:after {
     content: " "; /* 1 */
