--- a/_assets/scss/layouts/_articles.scss
+++ b/_assets/scss/layouts/_articles.scss
@@ -87,6 +87,10 @@
   .article-content {
     margin-bottom: $unit-3;
     margin-top: -4px;
+
+    @include breakpoint($med) {
+      padding-right: $unit-2;
+    }
   }
 }
 
